# higgsfield

./: .gitignore  2.gae.ipynb  3.ppo.ipynb  5.ddpg.ipynb  8.gail.ipynb  9.her.ipynb  LICENSES.md  README.md  expert_traj.npy  pyproject.toml  setup.md  tutorial.md
.github/workflows/: publish.yml  smoketest.yml
higgsfield/: experiment.py  path.py
higgsfield/checkpoint/: __init__.py  fsdp_checkpoint.py  fsdp_utils.py
higgsfield/dataset/: __init__.py  dataset.py  openai.py
higgsfield/internal/: cfg.py  cli.py  init.py  launch.py  main.py  util.py
higgsfield/internal/ci/: cli.py  setup.py
higgsfield/internal/experiment/: ast_parser.py  builder.py  decorator.py  params.py
higgsfield/llama/: __init__.py  llama.py  llama_utils.py
higgsfield/loaders/: __init__.py  llama_loader.py
higgsfield/mistral/: mistral.py  mistral_loader.py  mistral_utils.py
higgsfield/rl/: README.md
higgsfield/rl/rl_adventure_2/: 1.actor-critic.ipynb  4.acer.ipynb  7.soft actor-critic.ipynb
higgsfield/rl/rl_adventure_2/common/: __init__.py
higgsfield/static/project/: .gitignore  Dockerfile  env  requirements.txt
higgsfield/static/project/src/: alpaca_bf16.py  alpaca_fp16.py  dataset.py
higgsfield/static/templates/: README_md.j2  config_py.j2  deploy_action.j2  experiment_action.j2  kill_action.j2
higgsfield/training/: __init__.py  grads.py  scaler.py
higgsfield/tutorials/: 2.gae.ipynb  6.td3.ipynb
higgsfield/utils/: __init__.py  flush.py
tutorials/: README.md  chatgpt.ipynb  prompt_completion.ipynb  text_format.ipynb
