[tool.poetry]
name = "higgsfield"
version = "0.0.4-rc"
description = ""
authors = ["Yerzat Dulat <yerzat@higgsfield.ai>", "Anwar Omar <anwar@higgsfield.ai>"]
readme = "README.md"
include = ["static/*"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8.13"
click = "^8.1.7"
pyyaml = "^6.0.1"
asyncer = "^0.0.2"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
cryptography = "^41.0.4"
asyncssh = {extras = ["bcrypt", "libnacl", "pyopenssl"], version = "^2.14.0"}
bcrypt = "^4.0.1"
libsodium = "^2.6.1"
pyopenssl = "^23.2.0"

[tool.poetry.scripts]
higgsfield = "higgsfield.internal.main:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
